cmake_minimum_required(VERSION 2.8)
project(mock-2016)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
set(CMAKE_CXX_COMPILER "/usr/local/bin/g++")
add_executable(mock-2016 main1.cpp TargetProcessor.cpp TargetDetector.cpp Target.cpp NetworkController.cpp GUIManager.cpp CmdLineInterface.cpp)
find_package(OpenCV REQUIRED)
find_package(Boost REQUIRED COMPONENTS system thread)
target_link_libraries(mock-2016 ${OpenCV_LIBS} ${Boost_LIBRARIES})
